# casket-ssg

./: .gitignore  .hypatia-ignore  AGENTIC.scm  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Casket.hs  ECOSYSTEM.scm  EXPLAINME.adoc  GOVERNANCE.adoc  Justfile  LICENSE  META.scm  Mustfile  NEUROSYM.scm  PALIMPSEST.adoc  PHASE2-ROADMAP.adoc  PLAYBOOK.scm  README.adoc  README.md  ROADMAP.adoc  ROADMAP.scm  RSR_OUTLINE.adoc  SECURITY.md  STATE.scm  casket-ssg.cabal  config.example.yaml  cookbook.adoc  flake.nix  justfile  stack.yaml
.claude/: CLAUDE.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: documentation.yml  question.yml
.github/workflows/: casket-ci.yml  ci.yml  codeql.yml  dependency-review.yml  governance.yml  hypatia-scan.yml  license-compliance.yml  pages.yml  release.yml  sbom.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  root-allow.txt
.machine_readable/contractiles/: Adjustfile.a2ml  Mustfile.a2ml
.machine_readable/descriptiles/: PLAYBOOK.a2ml
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  aibdp.json  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
adapters/: README.md  package.json  rescript.json
adapters/src/: CasketAdapter.res
assets/: style.css
content/: about.md  index.md
content/posts/: hello-world.md
docs/: ACCESSIBILITY-CHECKLIST.adoc  tech-debt-2026-05-26.md
docs/decisions/: ADR-0001-content-engine.adoc  ADR-0002-i18n-via-lol.adoc
docs/guides/: accessibility.adoc  authoring-a-site.adoc  templates-and-theming.adoc  the-gnosis-layer.adoc
locales/: de.txt  en.txt  es.txt  fr.txt
site/: index.md
src/: Casket.hs  CasketGnosis.hs
src/Gnosis/: DAX.hs  Paxos.hs  Render.hs  SExp.hs  SixSCM.hs  Types.hs
templates/: default.html  modern.css
test-features/.machine_readable/: STATE.scm
test-features/input/: test.md
test-features/output/: test.html
