cabal-version:      3.0
name:               casket-ssg
version:            1.0.0
synopsis:           Pure functional static site generator in Haskell
description:        A Hakyll-inspired static site generator showcasing Haskell's
                    pure functions, pattern matching, and lazy evaluation for
                    elegant site generation with compile-time template validation.
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             hyperpolymath
maintainer:         hyperpolymath
copyright:          2024-2025 hyperpolymath
category:           Web
build-type:         Simple
extra-source-files: README.adoc
                    README.md

executable casket-ssg
    main-is:          Casket.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall -O2
    build-depends:    base >= 4.14 && < 5

source-repository head
    type:     git
    location: https://github.com/hyperpolymath/casket-ssg.git
