cabal-version:      3.0
name:               casket-ssg
version:            1.0.0
synopsis:           Pure functional static site generator in Haskell
description:        A Hakyll-inspired static site generator showcasing Haskell's
                    pure functions, pattern matching, and lazy evaluation for
                    elegant site generation with compile-time template validation.
license:            MPL-2.0
license-file:       LICENSE
author:             Jonathan D.A. Jewell
maintainer:         j.d.a.jewell@open.ac.uk
copyright:          2024-2026 Jonathan D.A. Jewell
category:           Web
build-type:         Simple
extra-source-files: README.adoc
                    README.md

executable casket-ssg
    main-is:          CasketGnosis.hs
    other-modules:    Gnosis.Types
                    , Gnosis.SExp
                    , Gnosis.Render
                    , Gnosis.Paxos
                    , Gnosis.SixSCM
                    , Gnosis.DAX
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2
    build-depends:    base >= 4.14 && < 5
                    , containers >= 0.6
                    , text >= 1.2
                    , time >= 1.9
                    , directory >= 1.3
                    , filepath >= 1.4
                    , pandoc >= 3.0
                    , pandoc-types >= 1.23

source-repository head
    type:     git
    location: https://github.com/hyperpolymath/casket-ssg.git
